Learn new concepts in Dom

--- a/Javascript/basicdom.html
+++ b/Javascript/basicdom.html
@@ -1,17 +1,30 @@
  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="basicdomStyle.css">
+<body>
+	<div class="firstDom">
+		<h1 id="idH1">Hello World</h1>
+		<h2 id="idH2" place ="canada" >Hello Canada</h2>
+		<h3 id="idH3">Hello Alberta</h3>
+		<h4 id="idH4">Hello Calgary </h4>
+		<input type="" name=""><br><br>
+		<button id="idBtnPush" onclick="addH1()">Push Me!</button><br><br>
+	</div><br>
 
-<h1 id="idH1">Hello World</h1>
-<h2 id="idH2">Hello Canada</h2>
-<h3 id="idH3">Hello Alberta</h3>
-<h4 id="idH4">Hello Calgary </h4>
-<input type="" name=""><br><br>
-<button>Push Me!</button><br><br>
-<div> I am a div 
-	<h5>first div child</h5>
-	<h5>second div child</h5>
-</div>
+	<div id="idDiv" class="secondDom" > I am a div 
+		<h5>first div child</h5>
+		<h5>second div child</h5>
+	</div> <br><br>
 
+	<div class="thirdDom"> Adding stuff!
+	<input id="stuffInput" type="text" placeholder="add stuff">
+	<button id="submitStuff">Submit!</button>
+		<ul id="lista">
+			<li>one</li>
+			<li>two</li>
+		</ul>
+	</div><br><br>
 
+</body>
 <script src="basicdom.js">
 	
 </script>
