made the first part of cards game

--- a/Javascript/dom.html
+++ b/Javascript/dom.html
@@ -20,21 +20,24 @@
 	<button id="DomAbtn" >Add</button><br>
 </div> <br>
 
-<div class="addC">
+
+<!-- Working with cards -->
+	
+<div>
 	<h1>Working with cards</h1>
-		<div>
-			<button>Add Card</button> <br>
+<div class="container">
 
-			<div  class="a">Card 1</div>
+		<div id="left" class="left">		
+			<button id="AddCard">Add Card</button> </br>
+	</div>
 
-			<div class="b" >Card 2</div>
-
-			<div class="c" >Card 3</div>
-		
+			<div class="right">
+				<h2>Right Side </h2>
 		</div>
-		
-
+	</div>
 </div>
+
+
 
   <script src="dom.js"></script>
 </body>
